--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --colors --config ./build/webpack.dev.js",
     "build": "webpack --colors --config ./build/webpack.prod.js",
-    "test": "nodemo "
+    "mocha": "mocha"
   },
   "keywords": [
     "typescript",
@@ -16,14 +16,22 @@
   "author": "leezhiyu",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.1",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "^7.9.0",
+    "@types/jest": "^25.2.1",
     "@types/jquery": "^3.3.32",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^13.7.0",
     "@types/webpack": "^4.41.6",
     "@types/webpack-env": "^1.15.1",
     "axios": "^0.19.2",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
+    "mocha": "^7.1.1",
     "nodemon": "^2.0.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
